syntax ="proto3";

option go_package= "github.com/SurendharHK/ecommerce-proto";

package payment;

service paymentService{
    rpc CreatePayment(PaymentDetails) returns (PaymentResponse);
}

message PaymentDetails{
    float Cardno=1;
	string CustomerID = 2;
	int32 Cvvverified  =3;   
	float Amount     =4;    
}

message PaymentResponse{
    string Status =1;
}


